--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">village-vista-app</string>
-    <string name="title_activity_main">village-vista-app</string>
+    <string name="app_name">Village Orbit</string>
+    <string name="title_activity_main">Village Orbit</string>
+
+    <!-- DO NOT CHANGE THESE -->
     <string name="package_name">com.villagevista.app</string>
     <string name="custom_url_scheme">com.villagevista.app</string>
 </resources>
